# local-ai-voice

./: .env.example  .gitignore  README.md  eslint.config.mjs  pnpm-lock.yaml  tsconfig.base.json  update-and-restart.sh
apps/gateway/: package.json  tsconfig.build.json
apps/gateway/src/: app.ts  catalog.ts  config-store.ts  (+9 more)
apps/portal/: tsconfig.json  vite.config.ts
docs/: api-compatibility.md  api.md  architecture.md  deployment.md  model-management.md  operations.md  security.md  stt-test-plan.md  troubleshooting.md  vm-setup-esxi8-ubuntu2404.md
docs/local-ai-voice-reference-wav-fixed/: .env.example  README.md  compress-source.sh  eslint.config.mjs  package.json  update-and-restart.sh
scripts/: create-directories.sh  deploy-local.sh  hard-restart-worker.sh  install-systemd.sh  setup-node.sh  setup-workers.sh  smoke-test-api.sh  tail-logs.sh  test-transcription.sh  test-workers.sh
stt/: README.md
stt/runtime/: README.md
systemd/: local-ai-voice-gateway.service  local-ai-voice-stt-worker.service  local-ai-voice-tts-chatterbox.service  local-ai-voice-tts-kokoro.service  local-ai-voice.env.example
tts/: README.md
workers/stt-fast-whisper/: README.md  pyproject.toml
workers/stt-fast-whisper/app/: main.py
workers/stt-fast-whisper/tests/: test_settings.py
workers/tts-chatterbox/: README.md  pyproject.toml
workers/tts-chatterbox/app/: main.py
workers/tts-chatterbox/tests/: test_settings.py
workers/tts-kokoro/: README.md  pyproject.toml  requirements.txt
workers/tts-kokoro/app/: __init__.py  main.py
workers/tts-kokoro/tests/: test_settings.py
(+68 files in other folders)
