[project]
name = "local-ai-voice-stt-fast-whisper-worker"
version = "0.1.0"
description = "Local AI Voice faster-whisper STT worker"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.3",
  "python-multipart==0.0.20",
  "pydantic==2.11.5",
  "faster-whisper==1.2.1"
]

[tool.ruff]
line-length = 100
target-version = "py311"
