[project]
name = "local-ai-voice-tts-chatterbox-worker"
version = "0.1.0"
description = "Local AI Voice Chatterbox TTS worker"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.3",
  "python-multipart==0.0.20",
  "pydantic==2.11.5",
  "soundfile==0.13.1",
  "chatterbox-tts==0.1.7"
]

[tool.ruff]
line-length = 100
target-version = "py311"
