[project]
name = "local-ai-voice-tts-kokoro-worker"
version = "0.1.0"
description = "Local AI Voice Kokoro TTS worker"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.3",
  "python-multipart==0.0.20",
  "pydantic==2.11.5",
  "soundfile==0.13.1",
  "kokoro==0.9.4",
  "misaki[ja,zh]>=0.9.4"
]

[tool.ruff]
line-length = 100
target-version = "py311"
